--- a/539_ICE1/ICE1.html
+++ b/539_ICE1/ICE1.html
@@ -8,18 +8,19 @@
 	<header>
 		<h1> Xuenan Xu</h1>
 		<nav>
-			<ul>
-			<li><a href="">Linya Li</a></li>
-			<li><a href="">Yezhi Deng</a></li>
+			<a href="https://lipar8023.github.io/ICE1/linyali.html">Linya Li</a>
+			<a href="https://yezdeng.github.io/ICE%201/">Yezhi Deng</a>
+			<a href="https://xuenanxu.github.io/539_ICE1/ICE1.html">Xuenan Xu</a>
 		</nav>
-		<img src=img1.png>
-		<img src=img2.png>
-		<p> This is a paragraph</p>
-		<p> This is another paragraph</p>
+		<img src="https://i.pinimg.com/originals/fb/14/92/fb14922968771a6b19a6b2f8dd444001.jpg" alt="first picture">
+		<img src="img1.png" alt="second picture">
+		<img src="sketch.jpg" alt="third picture">
+		<p> This is the first paragraph.</p>
+		<p> This is the second paragraph.</p>
 	</header>
 	<form>
 		Name:
-		<input type="text" name="name" id = "name"></label><br>
+		<input type="text" name="name" id = "name"><br>
 		<label for="dob">DOB:</label>
 		<input type="date" name="DOB" id = "dob"><br>
 
@@ -33,5 +34,12 @@
   		<input type="radio" name="snack" value="tea"> Tea<br>
   		<input type="radio" name="snack" value="water"> Water<br>
 	</form>
+	<p> This is a list of my hobbies </p>
+	<ul>
+		<li> Reading books </li>
+		<li> Watching movies </li>
+		<li> Photography </li>
+	</ul>
+	<button type="button" name="button" style="margin-bottom:50px;"> A Button </button>
 </body>
-</htlml>
+</html>
