--- a/539_ICE1/ICE1.html
+++ b/539_ICE1/ICE1.html
@@ -14,7 +14,7 @@
 		</nav>
 		<img src="https://i.pinimg.com/originals/fb/14/92/fb14922968771a6b19a6b2f8dd444001.jpg" alt="first picture">
 		<img src="img1.png" alt="second picture">
-		<img src="sketch.jpg" alt="third picture">
+		<img src="sketch.png" alt="third picture">
 		<p> This is the first paragraph.</p>
 		<p> This is the second paragraph.</p>
 	</header>
