Update of ICE 1

--- a/539_ICE1/ICE1.html
+++ b/539_ICE1/ICE1.html
@@ -10,31 +10,33 @@
 		<nav>
 			<a href="https://lipar8023.github.io/ICE1/linyali.html">Linya Li</a>
 			<a href="https://yezdeng.github.io/ICE%201/">Yezhi Deng</a>
-			<a href="https://xuenanxu.github.io/539_ICE1/ICE1.html">Xuenan Xu</a>
 		</nav>
-		<img src="https://i.pinimg.com/originals/fb/14/92/fb14922968771a6b19a6b2f8dd444001.jpg" alt="first picture">
-		<img src="img1.png" alt="second picture">
-		<img src="sketch.png" alt="third picture">
-		<p> This is the first paragraph.</p>
+		<p>Picture 1</p>
+		<img src="https://i.pinimg.com/originals/fb/14/92/fb14922968771a6b19a6b2f8dd444001.jpg" alt="first picture" width = "400"><br><br>
+		<p> Picture 2</p>
+		<img src="img1.png" alt="second picture" width = "400"><br><br>
+		<p> Picture 3 </p>
+		<img src="sketch.png" alt="third picture" width = "400">
+		<p> Differnces across browsers: <br> There are no significant differences of the layout of the website between difference browsers. However, when zooming in and out the website, I find the radio buttons work a little bit differently. In Safari, when zooming in the view of the website, the radio buttons don't show completely, but Chrome and Firefox don't have this problem.</p>
 		<p> This is the second paragraph.</p>
 	</header>
 	<form>
 		Name:
 		<input type="text" name="name" id = "name"><br>
 		<label for="dob">DOB:</label>
-		<input type="date" name="DOB" id = "dob"><br>
+		<input type="date" name="DOB" id = "dob"><br><br>
 
-		Please enter your choice of snack:<br>
-		<input type="radio" name="snack" value="pizza"> Pizza<br>
-  		<input type="radio" name="snack" value="donut"> Donut<br>
-  		<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+		Please enter your choice of <strong>snack</strong>:<br>
+		<input type="radio" name="snack" value="pizza" id="pizza"> <label for ="pizza">Pizza</label><br>
+  		<input type="radio" name="snack" value="donut" id="donut"> <label for ="donut">Donut</label><br>
+  		<input type="radio" name="snack" value="vegan" id="vegan"> <label for ="vegan">Vegan Stuff</label><br><br>
 
-  		Please enter your choice of drink:<br>
-		<input type="radio" name="snack" value="coffee"> Coffee<br>
-  		<input type="radio" name="snack" value="tea"> Tea<br>
-  		<input type="radio" name="snack" value="water"> Water<br>
+  		Please enter your choice of <strong>drink</strong>:<br>
+		<input type="radio" name="snack" value="coffee" id="coffee"> <label for ="coffee">Coffee</label><br>
+  		<input type="radio" name="snack" value="tea" id="tea"> <label for ="tea">Tea</label><br>
+  		<input type="radio" name="snack" value="water" id= "water"> <label for ="water">Water</label><br>
 	</form>
-	<p> This is a list of my hobbies </p>
+	<p> This is a list of my <strong>hobbies</strong> </p>
 	<ul>
 		<li> Reading books </li>
 		<li> Watching movies </li>
