Update label of Name

--- a/539_ICE1/ICE1.html
+++ b/539_ICE1/ICE1.html
@@ -21,7 +21,7 @@
 		<p> This is the second paragraph.</p>
 	</header>
 	<form>
-		Name:
+		<label for="name">Name:</label>
 		<input type="text" name="name" id = "name"><br>
 		<label for="dob">DOB:</label>
 		<input type="date" name="DOB" id = "dob"><br><br>
