--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -28,7 +28,7 @@
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
-						<li class="active"><a href="active">ABOUT</a></li>
+						<li class="active"><a href="#">ABOUT</a></li>
 						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
 					</ul>
 				</div>
