--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> Xuenan Xu </title>
+	<title> Xuenan Xu | GoodBuy </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,31 +27,10 @@
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="#">PORTFOLIO</a></li>
+						<li class="active"><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
 						<li><a href="About.html">ABOUT</a></li>
 						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius">
-				</div>
-				<div class="col-md-6">
-					<a href="GoodBuy.html"> <img src="images/GoodBuy.png" class="img-responsive" alt="GoodBuy"></a>
-				</div>
-				<div class="col-md-6">
-					<img src="images/Contextual_Inquiry.png" class="img-responsive" alt="Contextual Inquiry">
-				</div>
-				<div class="col-md-6">
-					<img src="images/Illustrations.png" class="img-responsive" alt="Illustrations">
-				</div>
-			</div>
-		</div>
-
-	</header>
-</body>
-</html>
