--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -34,3 +34,13 @@
 				</div>
 			</div>
 		</nav>
+	</header>
+	<div class="container text-center">
+			<h1>GoodBuy</h1>
+			<h5>A secondhand items transaction mobile application for campus apartment residents</h5>
+			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">
+	<div class="container">
+			
+	</div>
+</body>
+</html>
