--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -38,7 +38,7 @@
 		<div class="container text-center">
 			<h1>Hi! I'm Xuenan Xu</h1>
 			<h5> UX Designer & Photographer</h5>
-			<img src="images/Selfie.jpg" alt="Selfie" width="80%">
+			<img src="images/About.jpg" alt="About" width="80%">
 		</div>
 
 		<div class="container">
