--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -44,7 +44,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<p><strong> My Design Philosophy</strong> </p>
+					<p>My Design Philosophy</p>
 					<ul>
 						<li> Simplicity and straightforward </li>
 						<li> Small changes make big differences </li>
