--- a/Portfolio/Photography.html
+++ b/Portfolio/Photography.html
@@ -39,10 +39,51 @@
 	<div class="container text-center">
 			<h1>Photography</h1>
 			<h5>Besides UX Designer, I've been an amateur photographer for 4+ years. I started with digital photography, and now conducting film and iPhone photography as well. I record every beautiful moments with my cameras. Here are some of my works.</h5>
-	</div>
 
-
-	<div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="images/p1.jpg" class="img-responsive" alt="p1">
+				</div>				
+				<div class="col-md-4">
+					<img src="images/p2.jpg" class="img-responsive" alt="p2">
+				</div>	
+				<div class="col-md-4">
+					<img src="images/p9.jpg" class="img-responsive" alt="p3">
+				</div>
+			</div>	
+			
+			<div class="row">
+				<div class="col-md-4">
+					<img src="images/p4.jpg" class="img-responsive" alt="p4">
+				</div>	
+				<div class="col-md-4">
+					<img src="images/p5.jpg" class="img-responsive" alt="p5">
+				</div>	
+				<div class="col-md-4">
+					<img src="images/p3.jpg" class="img-responsive" alt="p6">
+				</div>	
+			</div>
+			
+			<div class="row">
+				<div class="col-md-4">
+					<img src="images/p7.jpg" class="img-responsive" alt="p7">
+				</div>
+				<div class="col-md-4">
+					<img src="images/p8.jpg" class="img-responsive" alt="p8">
+				</div>	
+				<div class="col-md-4">
+					<img src="images/p6.jpg" class="img-responsive" alt="p9">
+				</div>		
+			</div>
 	</div>
 
 </body>
+	<footer>
+			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
+			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
+			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
+			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
+			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
+		</footer>
+</html>
+
