--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -10,8 +10,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/js/bootstrap.min.js"></script>
 	
-	
 </head>
+
 <body>
 	<header>
 		
@@ -34,6 +34,7 @@
 				</div>
 			</div>
 		</nav>
+	</header>
 
 		<div class="container text-center">
 			<h1>Hi! I'm Xuenan Xu</h1>
@@ -56,14 +57,23 @@
 					<p> Aside from work, I'm also a cinephile and colaholic. </p>
 					<p>I'm currently looking for a UX internship starting from May 2018 or later. Please feel free to contact me or check my social media for more of my works.</p>
 					<button type="button" name="Contact" style="margin-bottom:50px;"> CONTACT </button>
-					<a href="#" class="fa fa-facebook"></a>
-					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-linkedin"></a>
-					<a href="#" class="fa fa-instagram"></a>
+					<!-- Social Media icons -->
+					
 
 				</div>
 			</div>
-		</div>
+		</div>		
+</body>
+<footer>
+			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
+			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
+			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
+			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
+			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
+		</footer>
+</html>
+
+
 
 
 
@@ -73,4 +83,4 @@
 	
 	
 
-	<!-- Social Media icons -->
+	
