--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -38,8 +38,17 @@
 
 	<div class="container text-center">
 			<h1>GoodBuy</h1>
-			<h5>A secondhand items transaction mobile application for campus apartment residents</h5>
+			<h6>A secondhand items transaction mobile application for campus apartment residents</h6>
 			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">		
 	</div>
+
 </body>
+
+<footer>
+			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
+			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
+			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
+			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
+			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
+		</footer>
 </html>
