--- a/Portfolio/Portfolio_Homepage.html
+++ b/Portfolio/Portfolio_Homepage.html
@@ -54,4 +54,11 @@
 
 	</header>
 </body>
+<footer>
+			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
+			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
+			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
+			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
+			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
+		</footer>
 </html>
