--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -23,7 +23,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
+					<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
@@ -45,21 +45,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<p>My Design Philosophy</p>
-					<ul>
-						<li> Simplicity and straightforward </li>
-						<li> Small changes make big differences </li>
-						<li> User-centered </li>
-					</ul>
+					<div>
+						<p>My Design Philosophy</p>
+						<ul>
+							<li> Simplicity and straightforward </li>
+							<li> Small changes make big differences </li>
+							<li> User-centered </li>
+						</ul>
+					</div>
 				</div>
 				<div class="col-md-6">
 					<p> Hi! I'm Xuenan Xu, a user experience designer at University of Michigan. I've also been an amateur photographer for 4+ years. My experience of photography makes me a good observer and experiencer in life, and I can spot things that are easily ignored by people. Being a user experience designer, I like to think, analyze and solve problems from the perspective of users. </p>
 					<p> Aside from work, I'm also a cinephile and colaholic. </p>
 					<p>I'm currently looking for a UX internship starting from May 2018 or later. Please feel free to contact me or check my social media for more of my works.</p>
-					<button type="button" name="Contact" style="margin-bottom:50px;"> CONTACT </button>
+					<button type="button" class="btn btn-default"> CONTACT </button>
 					<!-- Social Media icons -->
-					
-
 				</div>
 			</div>
 		</div>		
@@ -67,8 +67,8 @@
 <footer>
 			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
-			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
-			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
+			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-linkedin fa-2x"></a>
+			<a href="https://www.instagram.com/xuenanx/" class="fa fa-instagram fa-2x" ></a>
 			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
 		</footer>
 </html>
