--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -23,7 +23,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
+					<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
@@ -39,8 +39,31 @@
 	<div class="container text-center">
 			<h1>GoodBuy</h1>
 			<h5>A secondhand items transaction mobile application for campus apartment residents</h5>
-			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">		
-	</div>
+			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">
+	<div class="container">
+		<div class="overview">
+			<h3> Overview </h3>
+			<h5> Context </h5>
+			<p>The target user in the context are residents of campus apartments who have needs of dealing with second-hand items. Residents in campus apartments are normally students moving in and out frequently. Specifically speaking, for residents who no longer live here and don’t want to take all their items such as furniture or even the apartment the lived, they need to sell their items. For new residents, since most of them are students, who may live here for only few years and doesn’t want to buy expensive new items, they also need to get the information about where/from whom they can get these items. Moreover, for current residents, they may find some items they no longer use for a long time and wasted to be put aside, while they may also need something that might be frequently used in life but they don’t want to buy a new one. </p>
+		<div class="goal">
+			<h5>Goal</h5>
+			<div class="container text-center">
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="images/Delivery.png" id="icon" width="50%">
+						<p>Delivery</p>
+					</div>
+					<div class="col-sm-4">
+						<img src="images/Transaction.png" id="icon" width="50%">
+						<p>Transaction</p>
+					</div>
+					<div class="col-sm-4">
+						<img src="images/Information.png" id="icon" width="50%">
+						<p>Information</p>
+					</div>
+				</div>		
+			</div>
+		</div>
 
 </body>
 
