--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -45,7 +45,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<div>
+					<div class="myDesign">
 						<p>My Design Philosophy</p>
 						<ul>
 							<li> Simplicity and straightforward </li>
@@ -59,11 +59,11 @@
 					<p> Aside from work, I'm also a cinephile and colaholic. </p>
 					<p>I'm currently looking for a UX internship starting from May 2018 or later. Please feel free to contact me or check my social media for more of my works.</p>
 					<button type="button" class="btn btn-default"> CONTACT </button>
-					<!-- Social Media icons -->
-				</div>
+									</div>
 			</div>
 		</div>		
 </body>
+<!-- Social Media icons -->
 <footer>
 			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
