--- a/Portfolio/Portfolio_Homepage.html
+++ b/Portfolio/Portfolio_Homepage.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius">
+					<img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius" weight ="60%" height="40%">
 				</div>
 				<div class="col-md-6">
 					<a href="GoodBuy.html"> <img src="images/GoodBuy.png" class="img-responsive" alt="GoodBuy"></a>
