--- a/Portfolio/Photography.html
+++ b/Portfolio/Photography.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> Xuenan Xu | Photography</title>
+	<title> Xuenan Xu | Photography </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/homepage.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
 	
 </head>
 <body>
 	<header>
 		
-		<nav class="navbar navbar-inverse">
-			<div class="container-fluid">
+		<nav class="navbar navbar-default">
+		<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+				<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
 				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
+				
+				<div id="myNavbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
 						<li><a href="About.html">ABOUT</a></li>
 						<li class="active"><a href="#">PHOTOGRAPHY</a></li>
+						<li><a href="Document/Resume_Xuenan Xu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
