--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -44,13 +44,41 @@
 			<h1>GoodBuy</h1>
 			<h5>A secondhand items transaction mobile application for campus apartment residents</h5>
 			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">
-			<div id="gradient"></div>
 	<div class="container">
 		<div class="overview">
 			<h3> Overview </h3>
 			<h5> <strong>Context </strong></h5>
 			<p>The target user in the context are residents of campus apartments who have needs of dealing with second-hand items. Residents in campus apartments are normally students moving in and out frequently. Specifically speaking, for residents who no longer live here and don’t want to take all their items such as furniture or even the apartment the lived, they need to sell their items. For new residents, since most of them are students, who may live here for only few years and doesn’t want to buy expensive new items, they also need to get the information about where/from whom they can get these items. Moreover, for current residents, they may find some items they no longer use for a long time and wasted to be put aside, while they may also need something that might be frequently used in life but they don’t want to buy a new one. </p>
-		<div class="goal">
+		<div class="designProcess">
+			<h3> Design Process </h3>
+			<h5> <Strong> Competitive Analysis </strong> </h5>
+			<img src="images/CA.png" alt="CA" width="90%">
+			<p>The competitive analysis focused on 4 popular second hand transaction platforms. Pros and cons of these four existing platforms are studied.  The key findings after competitive analysis include:
+				<ul>
+					<li><p>Although these platforms all have the function of searching for products based on location, it's still far and inconvenient for delivery if the product is something heavy as a coach or mattress even if the transaction is made in the same city.</p></li>
+					<li><p>There are too many similar platforms, and users have different preference of using these platforms. Using different platforms actually disperses products information and make the transaction inefficient.<p></li>
+					<li><p>For residents like students, during the moving season, they have the special need of getting rid of products or buy products timely. However, all these platforms are not frequently used in life and sometimes a message is seen days later. Moreover, without highlighting the expired date or the status of the products, sometimes buyers can only know the product is already unavailable when they ask the sellers, making the transaction inefficient.<p></li>
+				</ul>
+			<h5> <Strong> Persona and Anti-persona </strong> <h5>
+				<div class="row">
+  					<div class="column">
+  						<img src="images/Ann.png" alt="persona1" width="100%">
+  					</div>
+  					<div class="column">
+  						<img src="images/Allen.png" alt="persona2" width="100%">
+  					</div>
+  				</div>
+  				<div class="row">
+  					<div class="column">
+  						<img src="images/Aaron.png" alt="persona3" width="100%">
+  					</div>
+  					<div class="column">
+  						<img src="images/Daisy.png" alt="persona4" width="100%">
+  					</div>	
+				</div>
+			</div>
+
+
 </body>
 
 <footer>
