--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -42,7 +42,7 @@
 
 	<div class="container text-center">
 			<h1>GoodBuy</h1>
-			<h5>A secondhand items transaction mobile application for campus apartment residents</h5>
+			<h5>A secondhand items transaction mobile application for campus apartment residents</h5><br><br>
 			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">
 	<div class="container">
 		<div class="overview">
@@ -58,7 +58,7 @@
 					<li><p>Although these platforms all have the function of searching for products based on location, it's still far and inconvenient for delivery if the product is something heavy as a coach or mattress even if the transaction is made in the same city.</p></li>
 					<li><p>There are too many similar platforms, and users have different preference of using these platforms. Using different platforms actually disperses products information and make the transaction inefficient.<p></li>
 					<li><p>For residents like students, during the moving season, they have the special need of getting rid of products or buy products timely. However, all these platforms are not frequently used in life and sometimes a message is seen days later. Moreover, without highlighting the expired date or the status of the products, sometimes buyers can only know the product is already unavailable when they ask the sellers, making the transaction inefficient.<p></li>
-				</ul>
+				</ul><br>
 			<h5> <Strong> Persona and Anti-persona </strong> <h5>
 				<div class="row">
   					<div class="column">
