--- a/Portfolio/Photography.html
+++ b/Portfolio/Photography.html
@@ -43,7 +43,7 @@
 
 	<div class="container text-center">
 			<h1>Photography</h1>
-			<h5>Besides UX Designer, I've been an amateur photographer for 4+ years. I started with digital photography, and now conducting film and iPhone photography as well. I record every beautiful moments with my cameras. Here are some of my works.</h5>
+			<h5>Besides UX Designer, I've been an amateur photographer for 4+ years. I started with digital photography, and now conducting film and iPhone photography as well. I record every beautiful moments with my cameras. Here are some of my works.</h5><br><br>
 
 			<div class="row">
 				<div class="col-md-4">
