--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -4,12 +4,10 @@
 	<title> Xuenan Xu | About </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/homepage.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
@@ -17,7 +15,7 @@
 
 <body>
 	<header>
-		
+		<!-- Navigation Bar -->
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
@@ -41,25 +39,13 @@
 		</nav>
 	</header>
 
+		<!-- Navigation Bar -->
 		<div class="container text-center">
 			<div class="about">
 				<h1>Hi! I'm Xuenan Xu</h1>
 				<h5> UX Designer & Photographer</h5>
 				<img src="images/About.png" alt="About" width="30%">
 		</div>
-
-			<!-- <div class="row">
-				<div class="col-md-6">
-					<div class="myDesign">
-						<p>My Design Philosophy</p>
-						<ul>
-							<li> Simplicity and straightforward </li>
-							<li> Small changes make big differences </li>
-							<li> User-centered </li>
-						</ul>
-					</div> -->
-				<!-- </div> -->
-				<!-- <div class="col-md-6"> -->
 		<div class="myIntroduction">
 
 			<p> Hi! I'm Xuenan Xu, a <strong>user experience designer </strong> at University of Michigan. I've also been an amateur <strong> photographer </strong> for 4+ years. My experience of photography makes me a good observer and experiencer in life, and I can spot things that are easily ignored by people. Being a user experience designer, I like to think, analyze and solve problems from the perspective of users. </p>
@@ -69,14 +55,8 @@
 				<a id="contact" href="mailto:xuenanxu@umich.edu">CONTACT</a>
 			</div>	
 
-				<!-- </div> -->
-			<!-- </div>
-		</div> -->		
-
-
-
 </body>
-<!-- Social Media icons -->
+<!-- Footer -->
 <footer>
 			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
