--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -4,19 +4,16 @@
 	<title> Xuenan Xu | GoodBuy </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/homepage.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	
-	
 </head>
 <body>
 	<header>
+		<!-- Navigation Bar -->
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
@@ -40,10 +37,13 @@
 		</nav>
 	</header>
 
+	<!-- Containt of the project -->
 	<div class="container text-center">
-			<h1>GoodBuy</h1>
-			<h5>A secondhand items transaction mobile application for campus apartment residents</h5><br><br>
-			<img src="images/582_head.jpg" alt="582" height="60%" width="80%">
+		<h1>GoodBuy</h1>
+		<h5>A secondhand items transaction mobile application for campus apartment residents</h5><br><br>
+		<div class="goodbuy">
+		</div>
+	</div>
 	<div class="container">
 		<div class="overview">
 			<h3> Overview </h3>
@@ -77,17 +77,19 @@
   					</div>	
 				</div>
 			</div>
+		</div>
 
 
-
+<!-- Footer -->
 
 </body>
 
 <footer>
-			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
-			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
-			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
-			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
-			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
+		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
+		<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
+		<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
+		<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
+		<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
 </footer>
+
 </html>
