--- a/Portfolio/Portfolio_Homepage.html
+++ b/Portfolio/Portfolio_Homepage.html
@@ -4,12 +4,10 @@
 	<title> Xuenan Xu </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/homepage.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
@@ -17,6 +15,7 @@
 </head>
 <body>
 	<header>
+		<!-- Navigation bar -->
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
@@ -38,25 +37,30 @@
 				</div>
 			</div>
 		</nav>
+
+		<!-- Containt of the page -->
+		<!-- Four projects -->
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius" weight ="60%" height="40%">
+					<a href="#"> <img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius" weight ="60%" height="40%"></a>
 				</div>
 				<div class="col-md-6">
 					<a href="GoodBuy.html"> <img src="images/GoodBuy.png" class="img-responsive" alt="GoodBuy"></a>
 				</div>
 				<div class="col-md-6">
-					<img src="images/Contextual_Inquiry.png" class="img-responsive" alt="Contextual Inquiry">
+					<a href="#"> <img src="images/Contextual_Inquiry.png" class="img-responsive" alt="Contextual Inquiry"></a>
 				</div>
 				<div class="col-md-6">
-					<img src="images/Illustrations.png" class="img-responsive" alt="Illustrations">
+					<href href="#"> <img src="images/Illustrations.png" class="img-responsive" alt="Illustrations"></a>
+
 				</div>
 			</div>
 		</div>
 
 	</header>
 </body>
+<!-- Footer -->
 <footer>
 			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
