--- a/Portfolio/Photography.html
+++ b/Portfolio/Photography.html
@@ -4,12 +4,10 @@
 	<title> Xuenan Xu | Photography </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/homepage.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
@@ -17,7 +15,7 @@
 </head>
 <body>
 	<header>
-		
+		<!-- Navigation Bar -->
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
@@ -28,7 +26,6 @@
 			</button>
 				<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
 				</div>
-				
 				<div id="myNavbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
@@ -40,7 +37,7 @@
 			</div>
 		</nav>
 	</header>
-
+<!-- Photo gallery -->
 	<div class="container text-center">
 			<h1>Photography</h1>
 			<h5>Besides UX Designer, I've been an amateur photographer for 4+ years. I started with digital photography, and now conducting film and iPhone photography as well. I record every beautiful moments with my cameras. Here are some of my works.</h5><br><br>
@@ -83,6 +80,7 @@
 	</div>
 
 </body>
+<!-- Footer -->
 	<footer>
 			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
