--- a/Portfolio/Photography.html
+++ b/Portfolio/Photography.html
@@ -31,7 +31,7 @@
 						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
 						<li><a href="About.html">ABOUT</a></li>
 						<li class="active"><a href="#">PHOTOGRAPHY</a></li>
-						<li><a href="Document/Resume_Xuenan Xu.pdf" target="_blank">RESUME</a></li>
+						<li><a href="Document/Resume_XuenanXu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
