--- a/Portfolio/Portfolio_Homepage.html
+++ b/Portfolio/Portfolio_Homepage.html
@@ -32,7 +32,7 @@
 						<li class="active"><a href="#">PORTFOLIO</a></li>
 						<li><a href="About.html">ABOUT</a></li>
 						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
-						<li><a href="Document/Resume_Xuenan Xu.pdf" target="_blank">RESUME</a></li>
+						<li><a href="Document/Resume_XuenanXu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -43,7 +43,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<a href="#"> <img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius" weight ="60%" height="40%"></a>
+					<a href="#"> <img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius"></a>
 				</div>
 				<div class="col-md-6">
 					<a href="GoodBuy.html"> <img src="images/GoodBuy.png" class="img-responsive" alt="GoodBuy"></a>
@@ -52,7 +52,7 @@
 					<a href="#"> <img src="images/Contextual_Inquiry.png" class="img-responsive" alt="Contextual Inquiry"></a>
 				</div>
 				<div class="col-md-6">
-					<href href="#"> <img src="images/Illustrations.png" class="img-responsive" alt="Illustrations"></a>
+					<a href="#"> <img src="images/Illustrations.png" class="img-responsive" alt="Illustrations"></a>
 
 				</div>
 			</div>
@@ -67,5 +67,5 @@
 			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
 			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
 			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
-		</footer>
+</footer>
 </html>
