--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -32,7 +32,7 @@
 						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
 						<li class="active"><a href="#">ABOUT</a></li>
 						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
-						<li><a href="Document/Resume_Xuenan Xu.pdf" target="_blank">RESUME</a></li>
+						<li><a href="Document/Resume_XuenanXu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
