--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -30,7 +30,7 @@
 						<li class="active"><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
 						<li><a href="About.html">ABOUT</a></li>
 						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
-						<li><a href="Document/Resume_Xuenan Xu.pdf" target="_blank">RESUME</a></li>
+						<li><a href="Document/Resume_XuenanXu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
