--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -44,8 +44,8 @@
 			<div class="about">
 				<h1>Hi! I'm Xuenan Xu</h1>
 				<h5> UX Designer & Photographer</h5>
-				<img src="images/About.png" alt="About" width="30%">
-		</div>
+				<img src="images/About.png" alt="About" width="400px">
+			</div>
 		<div class="myIntroduction">
 
 			<p> Hi! I'm Xuenan Xu, a <strong>user experience designer </strong> at University of Michigan. I've also been an amateur <strong> photographer </strong> for 4+ years. My experience of photography makes me a good observer and experiencer in life, and I can spot things that are easily ignored by people. Being a user experience designer, I like to think, analyze and solve problems from the perspective of users. </p>
@@ -54,16 +54,20 @@
 			<div class="contact">
 				<a id="contact" href="mailto:xuenanxu@umich.edu">CONTACT</a>
 			</div>	
+		</div>
+		</div>
 
-</body>
-<!-- Footer -->
-<footer>
+		<!-- Footer -->
+	<footer>
 			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
 			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-linkedin fa-2x"></a>
 			<a href="https://www.instagram.com/xuenanx/" class="fa fa-instagram fa-2x" ></a>
 			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
-		</footer>
+	</footer>
+
+</body>
+
 </html>
 
 
