--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -44,7 +44,7 @@
 			<div class="about">
 				<h1>Hi! I'm Xuenan Xu</h1>
 				<h5> UX Designer & Photographer</h5>
-				<img src="images/About.png" alt="About" width="400px">
+				<img src="images/About.png" alt="About">
 			</div>
 		<div class="myIntroduction">
 
