--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -52,14 +52,14 @@
 		<div class="designProcess">
 			<h3> Design Process </h3>
 			<h5> <Strong> Competitive Analysis </strong> </h5>
-			<img src="images/CA.png" alt="CA" width="90%">
+			<img src="images/CA.png" alt="CA">
 			<p>The competitive analysis focused on 4 popular second hand transaction platforms. Pros and cons of these four existing platforms are studied.  The key findings after competitive analysis include:
 				<ul>
 					<li><p>Although these platforms all have the function of searching for products based on location, it's still far and inconvenient for delivery if the product is something heavy as a coach or mattress even if the transaction is made in the same city.</p></li>
 					<li><p>There are too many similar platforms, and users have different preference of using these platforms. Using different platforms actually disperses products information and make the transaction inefficient.<p></li>
 					<li><p>For residents like students, during the moving season, they have the special need of getting rid of products or buy products timely. However, all these platforms are not frequently used in life and sometimes a message is seen days later. Moreover, without highlighting the expired date or the status of the products, sometimes buyers can only know the product is already unavailable when they ask the sellers, making the transaction inefficient.<p></li>
 				</ul><br>
-			<h5> <Strong> Persona and Anti-persona </strong> <h5>
+			<h5> <Strong> Persona and Anti-persona </strong> </h5>
 				<div class="row">
   					<div class="column">
   						<img src="images/Ann.png" alt="persona1" width="100%">
@@ -76,20 +76,20 @@
   						<img src="images/Daisy.png" alt="persona4" width="100%">
   					</div>	
 				</div>
-			</div>
 		</div>
 
 
 <!-- Footer -->
-
-</body>
-
-<footer>
+	<footer>
 		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
 		<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
 		<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
 		<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
 		<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
-</footer>
+	</footer>
+
+</body>
+
+
 
 </html>
