--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -62,21 +62,22 @@
 			<h5> <Strong> Persona and Anti-persona </strong> </h5>
 				<div class="row">
   					<div class="column">
-  						<img src="images/Ann.png" alt="persona1" width="100%">
+  						<img src="images/Ann.png" alt="persona1" width="100">
   					</div>
   					<div class="column">
-  						<img src="images/Allen.png" alt="persona2" width="100%">
+  						<img src="images/Allen.png" alt="persona2" width="100">
   					</div>
   				</div>
   				<div class="row">
   					<div class="column">
-  						<img src="images/Aaron.png" alt="persona3" width="100%">
+  						<img src="images/Aaron.png" alt="persona3" width="100">
   					</div>
   					<div class="column">
-  						<img src="images/Daisy.png" alt="persona4" width="100%">
+  						<img src="images/Daisy.png" alt="persona4" width="100">
   					</div>	
 				</div>
 		</div>
+	</div>
 
 
 <!-- Footer -->
